@@ -1,8 +1,5 @@
-verilog/inc2.v:1: 
 verilog/inc2.v:1: `line 1 "verilog/inc1.v" 1
-verilog/inc2.v:1: 
 verilog/inc2.v:1: `line 1 "verilog/inc1.v" 0
-verilog/inc2.v:1: 
 verilog/inc2.v:1: `line 1 "verilog/inc2.v" 1
 verilog/inc2.v:1: // DESCRIPTION: Verilog::Preproc: Example source code
 verilog/inc2.v:2: // This file ONLY is placed into the Public Domain, for any use,
@@ -10,9 +7,7 @@ verilog/inc2.v:3: // without warranty, 2000-2007 by Wilson Snyder.
 verilog/inc2.v:4: At file verilog/inc2.v  line 4
 verilog/inc3.v:1:  
 verilog/inc3.v:1: `line 5 "verilog/inc2.v" 0
-verilog/inc3.v:1: 
 verilog/inc3.v:1: `line 1 "verilog/inc3.v" 1
-verilog/inc3.v:1: 
 verilog/inc3.v:1: `line 2 "inc3_a_filename_from_line_directive" 0
 inc3_a_filename_from_line_directive:2: // DESCRIPTION: Verilog::Preproc: Example source code
 inc3_a_filename_from_line_directive:3: // This file ONLY is placed into the Public Domain, for any use,
@@ -34,14 +29,11 @@ inc3_a_filename_from_line_directive:16:
 inc3_a_filename_from_line_directive:17: 
 inc3_a_filename_from_line_directive:17: `line 17 "inc3_a_filename_from_line_directive" 0
 inc3_a_filename_from_line_directive:17: 
-inc3_a_filename_from_line_directive:18: 
 inc3_a_filename_from_line_directive:18: `line 18 "inc3_a_filename_from_line_directive" 2
-inc3_a_filename_from_line_directive:18: 
 inc3_a_filename_from_line_directive:18: `line 5 "verilog/inc2.v" 0
 verilog/inc2.v:5: 
 verilog/inc2.v:6:   
 verilog/inc2.v:6: `line 6 "verilog/inc2.v" 2
-verilog/inc2.v:6: 
 verilog/inc2.v:6: `line 1 "verilog/inc1.v" 0
 verilog/inc1.v:1: // DESCRIPTION: Verilog::Preproc: Example source code
 verilog/inc1.v:2: // This file ONLY is placed into the Public Domain, for any use,
@@ -113,4 +105,4 @@ verilog/inc1.v:64:     I!#r#e6<_Q{{E2+]I3<[3s)1@D|'E''i!O?]jD>Jo_![Cl)
 verilog/inc1.v:64:     #nj1]p,3^1~,="E@QZB\T)eU\pC#C|7=\$J$##A[@-@{Qk]
 verilog/inc1.v:67: `endprotected
 verilog/inc1.v:68: endmodule
-verilog/inc1.v:69: 
+verilog/inc1.v:69: `line 69 "verilog/inc1.v" 2
