@@ -1,5 +1,3 @@
-verilog/v_hier_subprim.v:001: unreadback '
-'
 verilog/v_hier_subprim.v:001: PREPROC '`line 1 "verilog/v_hier_subprim.v" 1
 '
 verilog/v_hier_subprim.v:008: unreadback '
@@ -96,12 +94,11 @@ verilog/v_hier_subprim.v:028: KEYWORD 'endmodule'
 verilog/v_hier_subprim.v:029: unreadback '
 '
 verilog/v_hier_subprim.v:029: PREPROC '`endcelldefine'
-verilog/v_hier_subprim.v:031: unreadback '
-
+verilog/v_hier_subprim.v:030: unreadback '
 '
-verilog/v_hier_subprim.v:031: ENDPARSE ''
-verilog/v_hier_sub.v:001: unreadback '
+verilog/v_hier_subprim.v:030: PREPROC '`line 30 "verilog/v_hier_subprim.v" 2
 '
+verilog/v_hier_subprim.v:030: ENDPARSE ''
 verilog/v_hier_sub.v:001: PREPROC '`line 1 "verilog/v_hier_sub.v" 1
 '
 verilog/v_hier_sub.v:006: unreadback '
@@ -294,12 +291,11 @@ verilog/v_hier_sub.v:039: unreadback '
 
 '
 verilog/v_hier_sub.v:039: KEYWORD 'endmodule'
-verilog/v_hier_sub.v:041: unreadback '
-
+verilog/v_hier_sub.v:040: unreadback '
 '
-verilog/v_hier_sub.v:041: ENDPARSE ''
-verilog/example.v:001: unreadback '
+verilog/v_hier_sub.v:040: PREPROC '`line 40 "verilog/v_hier_sub.v" 2
 '
+verilog/v_hier_sub.v:040: ENDPARSE ''
 verilog/example.v:001: PREPROC '`line 1 "verilog/example.v" 1
 '
 verilog/example.v:005: unreadback '
@@ -985,7 +981,8 @@ verilog/example.v:105: unreadback '
 
 '
 verilog/example.v:105: KEYWORD 'endmodule'
-verilog/example.v:107: unreadback '
-
+verilog/example.v:106: unreadback '
 '
-verilog/example.v:107: ENDPARSE ''
+verilog/example.v:106: PREPROC '`line 106 "verilog/example.v" 2
+'
+verilog/example.v:106: ENDPARSE ''
