@@ -1,4 +1,3 @@
-
 `line 1 "verilog/inc2.v" 1
 
 
@@ -6,9 +5,7 @@
 At file `__FILE__  line `__LINE__
  
 `line 5 "verilog/inc2.v" 0
-
 `line 1 "verilog/inc3.v" 1
-
 `line 2 "inc3_a_filename_from_line_directive" 0
 
 
@@ -30,9 +27,7 @@ At file `__FILE__  line `__LINE__
 
 `line 17 "inc3_a_filename_from_line_directive" 0
 
-
 `line 18 "inc3_a_filename_from_line_directive" 2
-
 `line 5 "verilog/inc2.v" 0
 
   
